# diffx

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  Cargo.toml  GEMINI.md  GITHUB_FLOW_DEMO.md  OMNI_DIFF.md  README.md  README_ja.md  README_zh.md  ci-local.sh  cliff.toml  fix_tests.py  test1.json  test1.yaml  test2.json  test2.yaml  test_all_options.js  test_all_options.py  verify_documentation.py
.claude/: settings.local.json
.githooks/: pre-push
.github/: labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: benchmark.yml  changelog.yml  ci.yml  publish-all.yml  release-act1.yml  release-act2.yml  release.yml
diffx-cli/: Cargo.toml
diffx-cli/src/: main.rs
diffx-core/: Cargo.toml
diffx-core/benches/: diff_benchmark.rs
diffx-core/src/: lib.rs
diffx-npm/: README.md  README_ja.md  examples.js  index.js  lib.js  package.json  test.js
diffx-npm/scripts/: download-binary.js
diffx-pip/: README.md  README_ja.md  pyproject.toml  test_manual.py
diffx-pip/src/diffx/: __init__.py  installer.py
diffx-python/: Cargo.toml  README.md  README_ja.md  examples.py  pyproject.toml  setup.py  test_integration.py
diffx-python/diffx_python/: __init__.py
diffx-python/src/diffx/: __init__.py  diffx.py  installer.py
docs/: ci-cd.md  faq.md  faq_ja.md  index.md  index_ja.md  index_zh.md  roadmap.md  usage.md  usage_ja.md
docs/guides/: integrations.md  integrations_ja.md  integrations_zh.md  performance.md  performance_benchmarks.md  performance_benchmarks_ja.md  performance_benchmarks_zh.md  performance_ja.md  performance_zh.md
docs/project/: changelog.md  changelog_ja.md  changelog_zh.md  github-flow-setup.md  roadmap_ja.md  roadmap_zh.md
docs/reference/: api-reference.md  api-reference_ja.md  api-reference_zh.md  cli-reference.md  cli-reference_ja.md  cli-reference_zh.md  comparison.md  comparison_ja.md  comparison_zh.md  diffx-format.md  diffx-format_ja.md  diffx-format_zh.md
docs/user-guide/: configuration.md  configuration_ja.md  configuration_zh.md  examples.md  examples_ja.md  examples_zh.md  faq.md  faq_ja.md  faq_zh.md  getting-started.md  getting-started_ja.md  getting-started_zh.md  installation.md  installation_ja.md  installation_zh.md
examples/: config_v1.json  config_v3.json  data2.json  file1.ini  file1.toml  file1.yaml  file2.csv  file2.json  file2.toml  file2.yaml  users1.json
scripts/: check-docs-consistency.sh  check-versions.sh  ci-local.sh  publish-all.sh  publish-npm.sh  publish-pypi.sh  setup-github-workflow.sh  test-published-packages.sh
tests/cli_examples/: mod.rs
tests/fixtures/: api_schema_v1.json  api_schema_v2.json  array_epsilon1.json  array_epsilon2.json  array_id_config.toml  case_test1.json  case_test2.json  config_dev.json  config_prod.json  config_v2.json  context_test1.json  context_test2.json  data1.json  file1.csv  file1.json  file1.xml  file2.ini  file2.xml  security_config.json  security_config_new.json  test_config.toml  users2.json  users_v1.json  users_v2.json  whitespace_test1.json  whitespace_test2.json
tests/fixtures/dir1/: config.json
tests/fixtures/dir1/subdir/: nested.json
tests/fixtures/dir2/: b.json  config.json
tests/fixtures/dir2/subdir/: nested.json
tests/integration/: cli_tests.rs  config_tests.rs  documentation_tests.rs  integration_tests.rs  mod.rs  performance_cli_tests.rs
tests/unit/: core_tests.rs  large_data_tests.rs  mod.rs  performance_tests.rs
