[package]
name = "diffx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Smart diff for config files. Compare JSON/YAML/TOML/XML semantically. Features: ignore patterns, array tracking, directory compare, JSON/YAML output"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]
exclude.workspace = true
rust-version.workspace = true

[dependencies]
diffx-core = { version = "0.5.0", path = "../diffx-core" }
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
similar = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[[test]]
name = "integration"
path = "../tests/integration/mod.rs"

[[test]]
name = "unit"
path = "../tests/unit/mod.rs"
