[package]
name = "diffx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for structured data diffing (JSON, YAML, TOML, XML, INI, CSV)"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
csv = { workspace = true }
configparser = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "diff_benchmark"
harness = false
