[package]
name = "diffx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Semantic diff library for structured data - JSON, YAML, TOML, XML, INI, CSV support"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
keywords = ["diff", "semantic", "json", "yaml", "data-structures"]
categories = ["data-structures", "parsing", "algorithms"]
exclude.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
csv = { workspace = true }
configparser = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "diff_benchmark"
harness = false
